# sublime-cpp-project-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  helloworld.cpp  setting.sublime-project
